--- a/requirements-backend.txt
+++ b/requirements-backend.txt
@@ -13,3 +13,4 @@ openai>=1.0.0
 langchain>=0.2.0
 langchain-openai>=0.1.0
 scipy>=1.11.0
+torch>=2.0.0  # CPU-only: pip install torch --index-url https://download.pytorch.org/whl/cpu
